Fix spacing on header

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -35,6 +35,8 @@
     border-right: 0px;
     border-top: 0px;
     border-bottom: 0px;
+    padding: 0.25rem;
+    white-space: nowrap;
 
     &:first-child {
       border-left: 0px;
